Fix dark mode in project section

--- a/src/sections/projects/Project.module.scss
+++ b/src/sections/projects/Project.module.scss
@@ -48,7 +48,6 @@
   text-align: center;
   align-self: center;
   justify-self: center;
-  color: #343434;
   margin-top: 35px;
   margin-bottom: 35px;
 }
