--- a/src/sections/projects/ProjectCard.module.scss
+++ b/src/sections/projects/ProjectCard.module.scss
@@ -1,7 +1,6 @@
 .project__container {
   display: flex;
   flex-direction: column;
-  background-color: #dce4f2;
   border-radius: 5px;
   height: 100%;
   padding: 32px;
@@ -9,7 +8,6 @@
 
 .project__container header {
   font-family: "Google Sans Regular";
-  color: #343434;
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: -.5px;
@@ -19,7 +17,6 @@
 
 .project__container p {
   font-family: "Google Sans Regular";
-  color: #343434;
   word-wrap: break-word;
   font-size: 20px;
   margin: 20px 0 20px 0;
@@ -57,6 +54,5 @@
 
 .software_skill__container__inline figure figcaption {
   font-size: 12px;
-  color: #8b97b2;
   font-family: "Google Sans Regular";
 }
